samples/_failures_safe/1761372849_cd5cc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00a315fe.c: In function ‘main’:
./samples/SAFE/__tmp_00a315fe.c:138:31: error: expected ‘)’ at end of input
  138 |     if (scanf("%d", &min_level
      |              ~                ^
      |                               )
./samples/SAFE/__tmp_00a315fe.c:138:5: error: expected declaration or statement at end of input
  138 |     if (scanf("%d", &min_level
      |     ^~
